<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>eu.tib.ts.statistics</groupId>
    <artifactId>terminology-service</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>history</module>
        <module>statistics</module>
    </modules>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
    </properties>

    	<repositories>
		<repository>
			<id>gitlab-maven</id>
			<url>https://git.tib.eu/api/v4/projects/1507/packages/maven></url>
		</repository>
	</repositories>
	<distributionManagement>
		<repository>
			<id>gitlab-maven</id>
			<url>https://git.tib.eu/api/v4/projects/1507/packages/maven</url>
		</repository>
		<snapshotRepository>
			<id>gitlab-maven</id>
			<url>https://git.tib.eu/api/v4/projects/1507/packages/maven</url>
		</snapshotRepository>
	</distributionManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-properties-migrator</artifactId>
            <version>3.1.2</version>
            <scope>runtime</scope>
        </dependency>
    </dependencies>
</project>